--- a/application/templates/organisation/index.html
+++ b/application/templates/organisation/index.html
@@ -7,25 +7,36 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-    <form class="govuk-form">
+    <form class="govuk-form" data-module="dl-list-filter-form">
       <div class="govuk-form-group">
-        <label for="organisation" class="govuk-label">Local authority reference</label>
-        <div class="govuk-hint">For example, BAB for Babergh</div>
+        <label for="organisation" class="govuk-label">Planning authority</label>
+        <div class="govuk-hint">For example, Harrogate or Lichfield</div>
         <input type="text" class="govuk-input" name="organisation">
       </div>
-      <p class="govuk-body"><a href="https://digital-land.github.io/organisation/" class="govuk-link">Find authority reference</a></p>
-      <div class="govuk-form-group">
-        <button class="govuk-button">Find</button>
+      <div class="app-hide-if-js">
+        <p class="govuk-body"><a href="https://digital-land.github.io/organisation/" class="govuk-link">Find authority reference</a></p>
+        <div class="govuk-form-group">
+          <button class="govuk-button">Find</button>
+        </div>
       </div>
     </form>
   </div>
 </div>
 
-  <p class="govuk-body">{{ organisations|length }} planning authorities listed</p>
-  <dl class="govuk-summary-list govuk-!-margin-bottom-0">
+<div class="app-list__wrapper dl-list-filter__count govuk-!-margin-top-6">
+
+  <div class="govuk-body dl-list-filter__count__wrapper">Showing
+    <p class="govuk-visually-hidden">
+      <span class="js-accessible-list-filter__count">{{ organisations|length }}</span>
+      of {{ organisations|length }}
+    </p>
+    <span class="js-list-filter__count" aria-hidden="true">{{ organisations|length }}</span>
+   planning authorities</div>
+
+  <dl class="govuk-summary-list govuk-!-margin-bottom-0" data-filter="list">
   {% for organisation in organisations %}
 
-    <div class="govuk-summary-list__row">
+    <div class="govuk-summary-list__row" data-filter="item">
       <dt class="govuk-summary-list__key">
         <h3 class="govuk-heading-s govuk-!-margin-bottom-0"><a href="{{ url_for('organisation.organisation', reference=organisation.organisation)}}" class="govuk-link govuk-link--text-colour">{{ organisation.name }}</a></h3>
         <span class="govuk-hint govuk-!-font-size-16">{{ organisation.organisation }}</span>
@@ -44,5 +55,15 @@
 
   {% endfor %}
   </dl>
+</div>
+
+<p class="dl-list-filter__no-filter-match">No planning authority matches that search term.</p>
+
 
 {% endblock content %}
+
+{% block pageScripts %}
+<script>
+  var $formToFilterList = document.querySelector('[data-module="dl-list-filter-form"]');
+</script>
+{% endblock pageScripts %}
